--- a/content/flyers/.md
+++ b/content/flyers/.md
@@ -15,5 +15,11 @@ tourcode: gtabwn602a
 quickinfo:
   - icon: /uploads/flag_black_18dp.png
     text: tour guide included
+  - icon: /uploads/hotel_black_18dp.png
+    text: accommodation included
+  - icon: /uploads/directions_bus_black_18dp.png
+    text: round trip transfers included
+  - icon: /uploads/restaurant_black_18dp.png
+    text: all meals included
 ---
 
